--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.35",
     "next-themes": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
